# super-data

./: .gitignore  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX_ANALYSIS.md  CONTRIBUTING.md  README.md  RELEASE.md  SPECIFICATION.md  mkdocs.yml  pyproject.toml
.github/workflows/: main-checks.yml  publish-docs-manually.yml  shared.yml
docs/: api.md  index.md
scripts/: update_readme_snippets.py
src/super_data/: __init__.py
